[project]
name = "media-pressure"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "beautifulsoup4>=4.13",
    "dbt-core>=1.11.11,<2",
    "dbt-duckdb>=1.10.1,<2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = [
    "*.ipynb",
]
force-exclude = true
